--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -18,7 +18,7 @@
 }
 
 .logo {
-  max-height: 60px;
+  max-height: 55px;
 }
 
 .search-form {
@@ -199,8 +199,9 @@
   min-width: 18px;
   text-align: center;
 }
+
 .kategorije.active {
   background-color: white;
   color: grey;
-  
+
 }
